--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <body>
 
-<h2 style="text-align:center;">HCL TECHNOLOGIES</h2>
-  <h2> !!.............Hie we are DevOps Engineer...........!!  </h2>
+<h2 style="text-align:center;">Fintech solutions</h2>
+  <h2> !!............we can speaks fuently finace...........!!  </h2>
   
  
-  <h2>    !!....... DEVOPS TEAM ....`......!!</h2>
+  <h2>    !!....... Banking services ....`......!!</h2>
  
 
 </body>
